# MODA

./: .gitignore  1.20 회의록.md  2025.01.15.docx  2025.01.16.docx  JPA.md  JPA_Entity_Mapping.md  Jenkinsfile  Jenkinsfile 작성법.md  Jenkins와 GitLab 연동 방법.md  PWA.md  README.md  docker-compose.local.yml  docker-compose.yml  moda-app-42206-firebase-adminsdk-fbsvc-37c9aa54d2.json  test.txt  ~$25.01.16.docx  백엔드 프로젝트를 Dockerizing하는 법.md  사용자_맞춤_게시글_추천_서비스.md
0115_zustand/tic-tac-toe/: index.html  package-lock.json
backend/: Jenkinsfile
exec/: moda_dump.sql
img/: 250120_메인페이지와이어프레임.ini
load-tests/: k6-card-creation.js  k6-concurrent-same-url.js  k6-main-page.js
moda/: .env  build.gradle.kts
moda-api/: .dockerignore  .gitignore  Dockerfile  HELP.md  build.gradle  local.properties  settings.gradle
moda-nlp/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
moda-nlp/app/: main.py  test.py
moda-nlp/app/constants/: category.py  image_prompt.py  post_prompt.py  prompt.py  youtube_prompt.py
moda-nlp/app/routers/: crawl.py  embedding.py  summary.py
moda-nlp/app/schemas/: crawl.py  image.py  post.py  youtube.py
moda-nlp/app/services/: crawl_and_analyze.py  crawler.py  embedding.py  image_analyze.py  llm_client.py  post_summary.py  spell_ckeck.py  summary.py  youtube_process.py
moda/app/: build.gradle.kts  google-services.json
moda/gradle/: libs.versions.toml
modaextractYoutube/: README.md  settings.gradle.kts
modaextractYoutube/app/: build.gradle.kts
modapjt/: settings.gradle.kts
modapjt/app/: build.gradle.kts
monitoring/: prometheus.yml
monitoring/dashboards/: moda-crawling.json  moda-http.json  moda-jvm.json  moda-mainpage.json  moda-overview.json
my-pwa-app/: .eslintrc.cjs  .gitignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
my-pwa-app/public/: index.html  manifest.json  manifest.webmanifest  sw.js
my-pwa-app/src/: App.jsx  App.tsx  (+4 more)
nginx/: Dockerfile  nginx.conf  nignx.conf
vite-project/: index.html  vite.config.js
(+752 files in other folders)
