[project]
name = "moda-nlp"
version = "0.1.0"
description = ""
authors = [
    {name = "Dreaming-J",email = "kimjjong321@naver.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.7,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sentence-transformers (>=3.4.0,<4.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "ollama @ git+https://github.com/ollama/ollama-python.git@main ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "googletrans (>=4.0.2,<5.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"