[project]
name = "moda-nlp"
version = "0.1.0"
description = ""
authors = [
    {name = "Dreaming-J",email = "kimjjong321@naver.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.7,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "google-genai",
    "python-dotenv",
    "googletrans (>=4.0.2,<5.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
