[project]
name = "moda-nlp"
version = "0.1.0"
description = ""
authors = [
    {name = "Dreaming-J",email = "kimjjong321@naver.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "fastapi (>=0.115.7,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "openai (>=1.0.0,<2.0.0)",
    "python-dotenv",
    "googletrans (>=4.0.2,<5.0.0)",
    "prometheus-fastapi-instrumentator (>=6.1.0,<7.0.0)",
    "httpx (>=0.27.0,<1.0.0)",
    "beautifulsoup4 (>=4.12.0,<5.0.0)",
    "lxml (>=5.1.0,<6.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
